// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Divider passes the snapshot test for different length modes 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1A2138",
          "display": "flex",
        },
        Object {
          "height": 1,
          "width": "50%",
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ee82ee",
          "display": "flex",
        },
        Object {
          "height": 20,
          "width": 1,
        },
      ]
    }
  />,
]
`;

exports[`Atoms/Divider passes the snapshot test in dark mode 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1A2138",
          "display": "flex",
        },
        Object {
          "height": 1,
          "width": "100%",
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1A2138",
          "display": "flex",
        },
        Object {
          "height": "100%",
          "width": 1,
        },
      ]
    }
  />,
]
`;

exports[`Atoms/Divider passes the snapshot test in light mode 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
        },
        Object {
          "height": 1,
          "width": "100%",
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
        },
        Object {
          "height": "100%",
          "width": 1,
        },
      ]
    }
  />,
]
`;
